--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -13,3 +13,13 @@
 .backToHome {
   margin: 3rem 0 0;
 }
+
+.footer {
+  position: absolute;
+  font-size: 12px;
+  bottom: 0;
+  width: 100%;
+  height: 45px;
+  background-color: #f5f5f5;
+  text-align: center;
+}
