--- a/components/card/card.module.scss
+++ b/components/card/card.module.scss
@@ -1,12 +1,16 @@
 @import "https://pro.fontawesome.com/releases/v5.12.0/css/all.css";
 @import "https://cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css";
+@import url("https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Lobster&display=swap");
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
+  height: auto;
   margin: auto;
   text-align: center;
   font-family: arial;
+  padding: 10px;
+  padding-top: 15px;
 }
 
 .card button {
@@ -49,4 +53,12 @@
       color: #ffffff;
     }
   }
+}
+
+.card p {
+  font-family: "Akaya Telivigala", cursive;
+}
+
+.card h1 {
+  font-family: "Lobster", cursive;
 }
