--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -15,11 +15,13 @@
 }
 
 .footer {
-  position: absolute;
-  font-size: 12px;
+  position: relative;
+  font-size: 15px;
+  font-family: Hack monospace;
   bottom: 0;
   width: 100%;
-  height: 45px;
-  background-color: #f5f5f5;
+  height: 30px;
+  background-color: black;
+  color: white;
   text-align: center;
 }
