--- a/styles/global.css
+++ b/styles/global.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@0;1&family=Ubuntu:wght@300&display=swap");
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Ubuntu", sans-serif;
+
   line-height: 1.6;
   font-size: 18px;
 }
@@ -24,4 +26,11 @@ a:hover {
 img {
   max-width: 100%;
   display: block;
+}
+
+img[src*="#bigImg"] {
+  border-radius: 10%;
+  border: 1px double #333;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  max-width: 100%;
 }
